# MacCortex

./: .copyright_quickref.md  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT.md  DAY_18_TEST_REPORT.md  END_TO_END_TEST_REPORT.md  FAQ.md  GUI_TEST_PLAN.md  HANDOFF_TO_NEW_SESSION.md  LICENSE  PHASE_0.5_DAY_1-2_GUIDE.md  PHASE_2_SUMMARY.md  PHASE_2_WEEK_3_PLAN.md  PHASE_2_WEEK_4_PLAN.md  PHASE_3_PLAN.md  PHASE_3_WEEK_1_SUMMARY.md  PHASE_3_WEEK_2_PLAN.md  PHASE_3_WEEK_2_SUMMARY.md  PHASE_3_WEEK_3_FINAL.md  PHASE_3_WEEK_3_PLAN.md  PHASE_3_WEEK_3_SUMMARY.md  PHASE_3_WEEK_4_DAY3-4_COMPLETE.md  PHASE_3_WEEK_4_DAY5_COMPLETE.md  PHASE_3_WEEK_4_PLAN.md  PHASE_3_WEEK_4_STRICT_TEST_REPORT.md  PHASE_4_ACCEPTANCE_REPORT.md  PHASE_4_PLAN.md  PHASE_4_WEEK_1_DAY_1-2_COMPLETE.md  PHASE_4_WEEK_1_DAY_1-2_TEST_REPORT.md  Package.swift  README.md  README_ARCH.md  SESSION2_PROGRESS_SUMMARY.md  TRANSLATE_AYA23_INTEGRATION.md  USER_GUIDE.md  VIDEO_SCRIPT.md  WEEK5_VALIDATION_REPORT.md  WEEK_2_BUILD_GUIDE.md  (+1 more)
Backend/: .env.example  .gitignore  CHANGELOG.md  DOCS_UPDATED_SUMMARY.md  DUCKDUCKGO_INTEGRATION.md  HITL_STRICT_TEST_REPORT.md  PHASE_1.5_ACCEPTANCE_REPORT.md  PHASE_1.5_DAY1-3_SUMMARY.md  PHASE_1.5_INTEGRATION_VALIDATION_REPORT.md  PHASE_4_WEEK_1_DAY_3-5_COMPLETE.md  PHASE_4_WEEK_1_DAY_6-7_COMPLETE.md  PHASE_4_WEEK_1_SUMMARY.md  PHASE_4_WEEK_2_DAY_1-3_COMPLETE.md  PHASE_4_WEEK_2_DAY_4-5_COMPLETE.md  PHASE_4_WEEK_2_DAY_6-7_COMPLETE.md  PHASE_4_WEEK_2_SUMMARY.md  PHASE_4_WEEK_3_DAY_1-3_COMPLETE.md  PHASE_4_WEEK_3_DAY_4-5_COMPLETE.md  PHASE_4_WEEK_4_DAY_4-5_COMPLETE.md  (+19 more)
(+256 files in other folders)
